force-app/main/default/objects/Subscription__c/fields/subscription_Pending_Change__c.field-meta.xml
<CustomField>
        <fullName>subscription_Pending_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Change</label>
        <type>Checkbox</type>
    </CustomField>