force-app/main/default/objects/Subscription__c/fields/subscription_PO_Number__c.field-meta.xml
<CustomField>
        <fullName>subscription_PO_Number__c</fullName>
        <description>Stores the PO Number</description>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>