force-app/main/default/objects/Subscription__c/fields/subscription_Promotional_Code__c.field-meta.xml
<CustomField>
        <fullName>subscription_Promotional_Code__c</fullName>
        <description>Stores the Promotional code used on this subscription</description>
        <label>Promotional Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>