force-app/main/default/objects/Subscription__c/fields/subscription_Quantity__c.field-meta.xml
<CustomField>
        <fullName>subscription_Quantity__c</fullName>
        <description>Stores the quantity for the subscription</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>