force-app/main/default/objects/Subscription__c/fields/subscription_Region__c.field-meta.xml
<CustomField>
        <fullName>subscription_Region__c</fullName>
        <description>Stores the region of the subscription</description>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>