force-app/main/default/objects/Subscription__c/fields/subscription_Renewal_Billing_Cycles__c.field-meta.xml
<CustomField>
        <fullName>subscription_Renewal_Billing_Cycles__c</fullName>
        <description>Stores the number of total billing cycles</description>
        <label>Renewal Billing Cycles</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>