force-app/main/default/objects/Subscription__c/fields/subscription_Requested_Bill_End_Date__c.field-meta.xml
<CustomField>
        <fullName>subscription_Requested_Bill_End_Date__c</fullName>
        <description>Stores the date of the requested bill ending</description>
        <label>Requested Bill End Date</label>
        <type>Date</type>
    </CustomField>