force-app/main/default/objects/Subscription__c/fields/subscription_Status__c.field-meta.xml
<CustomField>
        <fullName>subscription_Status__c</fullName>
        <description>Stores the status of the subscription</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>TERMINATED</fullName>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>