force-app/main/default/objects/Subscription__c/fields/subscription_Subscription_Currency__c.field-meta.xml
<CustomField>
        <fullName>subscription_Subscription_Currency__c</fullName>
        <description>Stores the type of currency for the subscription</description>
        <label>Subscription Currency</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>