force-app/main/default/objects/Subscription__c/fields/Subscription_Type__c.field-meta.xml
<CustomField>
        <fullName>Subscription_Type__c</fullName>
        <formula>subscription_Offer__r.Rate__r.Product__r.Name</formula>
        <label>Subscription Type</label>
        <type>Text</type>
    </CustomField>