force-app/main/default/objects/Subscription__c/fields/subscriptions_Remaining_Pause_Cycles__c.field-meta.xml
<CustomField>
        <fullName>subscriptions_Remaining_Pause_Cycles__c</fullName>
        <description>Stores the remaining cycles that can be paused</description>
        <label>Remaining Pause Cycles</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>