force-app/main/default/objects/Subscription__c/fields/Total_Liability__c.field-meta.xml
<CustomField>
        <fullName>Total_Liability__c</fullName>
        <label>Total Liability</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>