force-app/main/default/objects/Subscription__c/fields/Waive_Activation_Fee__c.field-meta.xml
<CustomField>
        <fullName>Waive_Activation_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waive Activation Fee</label>
        <type>Checkbox</type>
    </CustomField>