force-app/main/default/objects/Subscription__c/validationRules/Maximum_Grace_Extension.validationRule-meta.xml
<ValidationRule>
        <fullName>Maximum_Grace_Extension</fullName>
        <active>true</active>
        <errorConditionFormula>Extend_Grace_by_Days__c  &gt; 14</errorConditionFormula>
        <errorDisplayField>Extend_Grace_by_Days__c</errorDisplayField>
        <errorMessage>Maximum extension of grace is 14 days</errorMessage>
    </ValidationRule>