force-app/main/default/objects/Subscription__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>subscription_Account__c</columns>
        <columns>Contact__c</columns>
        <columns>subscription_Offer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>subscription_Status__c</field>
            <operation>equals</operation>
            <value>TERMINATED</value>
        </filters>
        <label>All</label>
    </ListView>