force-app/main/default/objects/Subscription__c/listViews/Alt_Pubs.listView-meta.xml
<ListView>
        <fullName>Alt_Pubs</fullName>
        <columns>NAME</columns>
        <columns>Alt_Publications__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Alt_Publications__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Alt Pubs</label>
    </ListView>